--- a/.gitignore
+++ b/.gitignore
@@ -88,6 +88,11 @@ ENV/
 # Rope project settings
 .ropeproject
 
-# Numpy data files
-*.npy
-*.h5
+# data files
+metrics/
+log/
+npy/
+h5/
+
+#compiled files
+.pyc
